--- a/MarkedRegisterDataParser/MarkedRegisterDataParser.csproj
+++ b/MarkedRegisterDataParser/MarkedRegisterDataParser.csproj
@@ -43,6 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Models\Base\BaseMarkedRegisterModel.cs" />
+    <Compile Include="Models\ConnectVoter.cs" />
+    <Compile Include="Models\MarkedRegisterVoter.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
